예매 취소 로직도 완성 ㅠ 자러가자